# PysternBlot

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  SECURITY.md  launcher.py  pyproject.toml  pysternblot_multiblot_roadmap.md
.github/workflows/: build-macos.yml  build-windows.yml  codeql.yml  publish.yml  pytest.yml
pysternblot/: Roadmap.md  app.py  image_utils.py  integrity.py  main.py  models.py  render.py  storage.py
pysternblot/ui/: crop_rect_item.py  export_mixin.py  legend_tab.py  main_window.py  marker_set_mixin.py  nir_import_dialog.py  overlay_ladder_mixin.py  project_io_mixin.py  widgets.py  zoomable_graphics_view.py
tests/: rhoa 20260220_131003_Ch_Chemi.tif  test_image_utils.py  test_models.py  test_multichannel_tiff.py  test_render_ladder.py  test_storage.py
